# Tdt-Dna-Storage-Simulator-V2

./: .gitignore  binary_dna_transcoder.py  default_decoder.py  default_encoder.py  dna_transcoder.py  encoder_base.py  hamming.py  param_gen.py  params_gen.py  requirements.txt  sim.sh  sim1.csv  sim11.csv  sim12.csv  sim12_result.json  sim13.csv  sim14_result.json  sim15.csv  sim15_result.json  sim16.csv  sim16_result.json  sim17_result.json  sim18.csv  sim19.csv  sim19_result.json  sim2.csv  sim21_result.json  sim23.csv  sim2_result.json  sim3.csv  sim3.sh  sim4.csv  sim5.csv  sim6.csv  sim7.csv  sim8_result.json  simulation.py  tdt.py  transcoder_base.py  visualize.ipynb
cpp_libs/: .gitignore  CMakeLists.txt  DnaTranscoder.cpp  TdT.cpp
params/2023f/: sim1  sim1.csv  sim3  sim3.csv
params/2023s/: sim0.csv  sim1.csv  sim10.csv  sim14.csv  sim17.csv  sim20.csv  sim21.csv  sim22.csv  sim7.csv  sim8.csv  sim9.csv
results/2023f/: sim1_result.json
results/2023s/: sim0_result.json  sim11_result.json  sim18_result.json  sim20_result.json  sim22_result.json  sim23_result.json  sim3_result.json  sim4_result.json  sim7_result.json
